tests/error/array_errors/linear_len.err
Guppy compilation failed. Error in file $FILE:14

12:    @guppy(module)
13:    def main(qs: array[qubit, 42]) -> int:
14:        return len(qs)
                  ^^^^^^^
GuppyTypeError: Cannot instantiate non-linear type variable `T` in type `forall T, n: nat. array[T, n] -> int` with linear type `qubit`
